style: fix typo

--- a/web-carislot/index.html
+++ b/web-carislot/index.html
@@ -255,7 +255,7 @@
                     <div class="col-xl-5 col-lg-6">
                         <div class="app-caption">
                             <div class="section-tittle section-tittle3">
-                                <h2>Donwload gratis sekarang juga!!</h2>
+                                <h2>Download gratis sekarang juga!!</h2>
                                 <p>Install aplikasi CEKSLOT di smartphone kamu</p>
                                 <div class="app-btn">
                                     <a href="#" class="app-btn1"><img src="assets/img/shape/app_btn1.png" alt=""></a>
